<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PVT</string>
    <string name="menu_settings">Settings</string>
    <string name="destination">Destination</string>
    <string name="track">Track</string>
    <string name="regVeh">Registered Vehicles</string>
    <string name="cityMap">City Map</string>
    <string name="desLoc">Destination Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tracking">Tracking</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_track">Track</string>
    <string name="newdes">New Destination</string>
    <string name="title_activity_bus_details">BusDetails</string>
    <string name="busNumber">Vehicle No. 1</string>
    <string name="busDetails">Vehicle Details</string>
    <string name="regRoutes">Registered Routes</string>
    <string name="routes">All the Reistered routes which the vehicle is supposed to cover</string>
    <string name="addInfo">Additional Information</string>
    <string name="info">Detailed Information about the vehicle relevant for the User</string>
    <string name="title_activity_contact_enquiry">ContactEnquiry</string>
    <string name="contacts">Contacts</string>
    <string name="busEnquiry">Vehicle Enquiry</string>
    <string name="contactNumbers">Contact Numbers of the Central Control Body</string>
    <string name="respBusContacts">Respective Vehicle Contacts</string>
    <string name="respContactNumber">Contact Details of the respective vehicle</string>
    <string name="title_activity_bus_list">BusList</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_pvtlaunch">PVTLaunchActivity</string>
    <string name="launch">Launch</string>

</resources>